changed background image and favicon

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@ body {
 					&copy; <a href="http://sajnikanth.com" target="_blank">Sajnikanth Suriyanarayanan</a>, 2014
 				</div>
 			</div>
+<div class="source" align="right" style="color: rgba(0,0,0,0)">
+	<a href="http://alpha.wallhaven.cc/wallpaper/65146" target="_blank">Image Source</a>
+</div>
 			<div class="gap-title2"></div>
 		</div>
 	</div>
