name in local script

--- a/index.html
+++ b/index.html
@@ -80,10 +80,13 @@ a:hover {
 	position: relative;
 }
 .title {
-	font-size: 40px;
+	font-size: 25px;
 	word-wrap: break-word;
-	text-align: left;
+	text-align: center;
 	line-height: 45px;
+}
+.footer {
+	font-size: 10px;
 }
 .bodycontent-wrapper {
 	width: 40%;
@@ -98,13 +101,14 @@ a:hover {
 	overflow: auto;
 }
 .bodycontent {
+	font-size: 15px;
 	text-align:left;
 	background: black;
 	padding: 30px;
 }
 .bodycontent-subtext {
+	font-size: 13px;
 	text-align:right;
-	background: black;
 	padding: 30px;
 }
 .inline-list li {
@@ -122,12 +126,20 @@ body {
 	background-size: contain;
 }
 .title {
-	font-size: 30px;
+	font-size: 20px;
 	word-wrap: break-word;
 }
 .bodycontent-wrapper {
+	font-size: 13px;
 	width: 100%;
 	margin-left:0;
+}
+.bodycontent-subtext {
+	font-size: 12px;
+	text-align:right;
+}
+.footer {
+	font-size: 10px;
 }
 .gap-title {
 	margin-top: 50%;
@@ -155,24 +167,25 @@ body {
 			<div class="gap-title"></div>
 			<div class="bodycontent">
 				<div class="title">
+					இசை    婉睿  सूरियनारायणन्
+					<br>
 					Isai Wanrui Suriyanarayanan
 				</div>
 				<hr class="hr1" />
 				<br>
 				<div>
 					"But here, now, reposing in his arms, weighing next to nothing but changing everything..."
-				<br>
+					<br>
 					<div class="bodycontent-subtext">
 						- The Namesake by Jhumpa Lahiri
 					</div>
 				</div>
 				<div class="footer" align="center" style="color: rgba(255,255,255,.5)">
 					&copy; <a href="http://sajnikanth.com" target="_blank">Sajnikanth Suriyanarayanan</a>, 2014
+					<br>
+					<a href="http://alpha.wallhaven.cc/wallpaper/65146" target="_blank">Image Source</a>
 				</div>
 			</div>
-<div class="source" align="right" style="color: rgba(0,0,0,0)">
-	<a href="http://alpha.wallhaven.cc/wallpaper/65146" target="_blank">Image Source</a>
-</div>
 			<div class="gap-title2"></div>
 		</div>
 	</div>
