--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ body {
 			<div class="gap-title"></div>
 			<div class="bodycontent">
 				<div class="title">
-					இசை    婉睿  सूरियनारायणन्
+					<a href="https://translate.google.com/#auto/en/இசை" target="_blank">இசை  </a>  <a href="https://translate.google.com/#auto/en/婉"target="_blank">婉</a><a href="https://translate.google.com/#auto/en/睿"target="_blank">睿</a> <a href="http://www.sanskritdictionary.com/sūryanārāyaṇa/270221/1"target="_blank">सूर्यनारायणन</a>
 					<br>
 					Isai Wanrui Suriyanarayanan
 				</div>
