--- a/index.html
+++ b/index.html
@@ -85,12 +85,9 @@ a:hover {
 	text-align: center;
 	line-height: 45px;
 }
-.footer {
-	font-size: 10px;
-}
 .bodycontent-wrapper {
 	width: 40%;
-	margin-left: 50%;
+	margin-right: 50%;
 	z-index:101;
 	position: relative;
 	color: #ffffff;
@@ -107,12 +104,15 @@ a:hover {
 	padding: 30px;
 }
 .bodycontent-subtext {
-	font-size: 13px;
+	font-size: 10px;
 	text-align:right;
 	padding: 30px;
 }
 .inline-list li {
 	display: inline;
+}
+.footer {
+	font-size: 10px;
 }
 @media all and (max-width: 1000px) {
 .gap-title {
@@ -135,7 +135,7 @@ body {
 	margin-left:0;
 }
 .bodycontent-subtext {
-	font-size: 12px;
+	font-size: 10px;
 	text-align:right;
 }
 .footer {
@@ -167,23 +167,29 @@ body {
 			<div class="gap-title"></div>
 			<div class="bodycontent">
 				<div class="title">
-					<a href="https://translate.google.com/#auto/en/இசை" target="_blank">இசை  </a>  <a href="https://translate.google.com/#auto/en/婉"target="_blank">婉</a><a href="https://translate.google.com/#auto/en/睿"target="_blank">睿</a> <a href="http://www.sanskritdictionary.com/sūryanārāyaṇa/270221/1"target="_blank">सूर्यनारायणन</a>
-					<br>
 					Isai Wanrui Suriyanarayanan
+					<br>
+				</div>
+				<div align="center">
+					23-October-2014 / 10:50 GMT+8 / 2.82 kg
 				</div>
 				<hr class="hr1" />
 				<br>
 				<div>
 					"But here, now, reposing in his arms, weighing next to nothing but changing everything..."
-					<br>
 					<div class="bodycontent-subtext">
 						- The Namesake by Jhumpa Lahiri
 					</div>
+					<div align="center">
+					<ul class="nobullet nomargin-nopadding inline-list">
+						<li><a href="mailto:mail@isai.cc" target="_blank"><img src="images/email.png" height="50" width="50" alt="email" title="email"/></a></li>
+						<li><a href="https://goodreads.com/isais" target="_blank"><img src="images/goodreads.png" height="50" width="50" alt="goodreads" title=""/></a></li>
+						<li><a href="https://github.com/isais" target="_blank"><img src="images/github.png" height="50" width="50" alt="github" title="github"/></a></li>
+					</div>
 				</div>
+				<br>
 				<div class="footer" align="center" style="color: rgba(255,255,255,.5)">
 					&copy; <a href="http://sajnikanth.com" target="_blank">Sajnikanth Suriyanarayanan</a>, 2014
-					<br>
-					<a href="http://alpha.wallhaven.cc/wallpaper/65146" target="_blank">Image Source</a>
 				</div>
 			</div>
 			<div class="gap-title2"></div>
