updated photo, removed quote

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ a:hover {
 }
 .bodycontent-wrapper {
 	width: 40%;
-	margin-right: 50%;
+	margin-right: 58%;
 	z-index:101;
 	position: relative;
 	color: #ffffff;
@@ -171,15 +171,13 @@ body {
 					<br>
 				</div>
 				<div align="center">
-					23-October-2014 / 10:50 GMT+8 / 2.82 kg
 				</div>
 				<hr class="hr1" />
 				<br>
-				<div>
-					"But here, now, reposing in his arms, weighing next to nothing but changing everything..."
-					<div class="bodycontent-subtext">
-						- The Namesake by Jhumpa Lahiri
-					</div>
+				<div align="center">
+					23-October-2014 / 10:50 GMT+8 / 2.82 kg
+				<br>
+				<br>
 					<div align="center">
 					<ul class="nobullet nomargin-nopadding inline-list">
 						<li><a href="mailto:mail@isai.cc" target="_blank"><img src="images/email.png" height="50" width="50" alt="email" title="email"/></a></li>
