--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ a:hover {
 }
 .bodycontent-wrapper {
 	width: 40%;
-	margin-right: 58%;
+	margin-left: 58%;
 	z-index:101;
 	position: relative;
 	color: #ffffff;
