--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@ body {
 				<div align="center">
 					23-October-2014 / 10:50 GMT+8 / 2.82 kg
 				<br>
+					06-January-2015 / 10:50 GMT+8 / 5.00 kg
+				<br>
 				<br>
 					<div align="center">
 					<ul class="nobullet nomargin-nopadding inline-list">
