updated image from photoshoot

--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@ a:hover {
 	line-height: 45px;
 }
 .bodycontent-wrapper {
-	width: 40%;
-	margin-left: 58%;
+  /* adjust these to change box postion and size */
+	width: 20%;
+	margin-left: -70%;
 	z-index:101;
 	position: relative;
 	color: #ffffff;
@@ -175,11 +176,6 @@ body {
 				<hr class="hr1" />
 				<br>
 				<div align="center">
-					23-October-2014 / 10:50 GMT+8 / 2.82 kg
-				<br>
-					06-January-2015 / 10:50 GMT+8 / 5.00 kg
-				<br>
-				<br>
 					<div align="center">
 					<ul class="nobullet nomargin-nopadding inline-list">
 						<li><a href="mailto:mail@isai.cc" target="_blank"><img src="images/email.png" height="50" width="50" alt="email" title="email"/></a></li>
