--- a/index.html
+++ b/index.html
@@ -8,42 +8,42 @@
 <link rel="icon" type="image/png" href="images/favicon.png" />
 <style type="text/css">
 iframe, object, embed {
-	max-width: 100% !important;
+    max-width: 100% !important;
 }
 * {
   margin: 0;
 }
 html, body {
-	font-family: 'Source Code Pro', sans-serif;
-	font-size: 14px;
-	font-weight: 200;
-	height: 100%;
+    font-family: 'Source Code Pro', sans-serif;
+    font-size: 14px;
+    font-weight: 200;
+    height: 100%;
 }
 body {
-	margin:0;
-	padding:0;
-	background: url(images/background.jpeg) top no-repeat #000000;
-	background-size: cover;
+    margin:0;
+    padding:0;
+    background: url(images/background.jpeg) top no-repeat #000000;
+    background-size: cover;
 }
 a, a:visited {
-	color:#27a9e1;
-	text-decoration: none;
+    color:#27a9e1;
+    text-decoration: none;
 }
 a:hover {
-	color:#FFFFFF;
-	text-decoration: none;
+    color:#FFFFFF;
+    text-decoration: none;
 }
 .hr1 {
-	height:1px;
-	background: rgba(255,255,255,.5);
-	border: 0;
-	margin: 15px auto;
+    height:1px;
+    background: rgba(255,255,255,.5);
+    border: 0;
+    margin: 15px auto;
 }
 .nobullet {
-	list-style: none;
+    list-style: none;
 }
 .nomargin-nopadding {
-	margin:0; padding:0;
+    margin:0; padding:0;
 }
 .page-wrap {
   min-height: 100%;
@@ -59,137 +59,164 @@ a:hover {
   height: 50px; */
 }
 .site-footer {
-	position: relative;
-	height: 50px;
-	bottom: 0;
-	right: 0;
-	z-index: 1002;
+    position: relative;
+    height: 50px;
+    bottom: 0;
+    right: 0;
+    z-index: 1002;
 }
 .gap-title {
-	margin-top: 40px;
-	height: 0;
-	content: "";
-	display: block;
-	position: relative;
+    margin-top: 40px;
+    height: 0;
+    content: "";
+    display: block;
+    position: relative;
 }
 .gap-title2 {
-	margin-top: 20px;
-	height: 0;
-	content: "";
-	display: block;
-	position: relative;
+    margin-top: 20px;
+    height: 0;
+    content: "";
+    display: block;
+    position: relative;
 }
 .title {
-	font-size: 20px;
-	word-wrap: break-word;
-	text-align: center;
-	line-height: 45px;
-}
-.bodycontent-wrapper {
-  /* adjust these to change box postion and size */
-	width: 20%;
-	margin-left: -70%;
-	z-index:101;
-	position: relative;
-	color: #ffffff;
-	font-family: 'Source Code Pro', sans-serif;
-	font-weight: 200;
-	text-align: left;
-	border-radius: 8px;
-	overflow: auto;
-}
-.bodycontent {
-	font-size: 15px;
-	text-align:left;
-	background: black;
-	padding: 30px;
-}
-.bodycontent-subtext {
-	font-size: 10px;
-	text-align:right;
-	padding: 30px;
-}
-.inline-list li {
-	display: inline;
+    font-size: 25px;
+    word-wrap: break-word;
+    text-align: center;
+    line-height: 45px;
 }
 .footer {
-	font-size: 10px;
+    font-size: 10px;
+}
+.bodycontent-wrapper {
+    /* adjust these to change box postion and size */
+    width: 30%;
+    margin-left: -55%;
+    z-index:101;
+    position: relative;
+    color: #ffffff;
+    font-family: 'Source Code Pro', sans-serif;
+    font-weight: 200;
+    text-align: left;
+    border-radius: 8px;
+    overflow: auto;
+}
+.bodycontent {
+    font-size: 15px;
+    text-align:left;
+    background: black;
+    padding: 30px;
+}
+.bodycontent-subtext {
+    font-size: 10px;
+    text-align:right;
+    padding: 30px;
+}
+.inline-list li {
+    display: inline;
+}
+.footer {
+    font-size: 10px;
 }
 @media all and (max-width: 1000px) {
 .gap-title {
-	margin-top: 10%;
+    margin-top: 10%;
 }
 @media all and (max-width: 700px) {
 body {
-	margin:0;
-	padding:0;
-	background: url(images/background_small.jpeg) top left no-repeat #000000;
-	background-size: contain;
+    margin:0;
+    padding:0;
+    background: url(images/background_small.jpeg) top left no-repeat #000000;
+    background-size: contain;
 }
 .title {
-	font-size: 20px;
-	word-wrap: break-word;
+    font-size: 20px;
+    word-wrap: break-word;
 }
 .bodycontent-wrapper {
-	font-size: 13px;
-	width: 100%;
-	margin-left:0;
+    font-size: 13px;
+    width: 100%;
+    margin-left:0;
 }
 .bodycontent-subtext {
-	font-size: 10px;
-	text-align:right;
+    font-size: 12px;
+    text-align:right;
 }
 .footer {
-	font-size: 10px;
+    font-size: 10px;
 }
 .gap-title {
-	margin-top: 50%;
+    margin-top: 50%;
 }
 
 .bodycontent-wrapper {
-	border-radius: 0;
+    border-radius: 0;
 }
 .bodycontent {
-	padding: 20px;
-	/*
-	-webkit-border-left-top-radius: 8px;
-	-webkit-border-bottom-left-radius: 8px;
-	-moz-border-radius-topleft: 8px;
-	-moz-border-radius-bottomleft: 8px;
-	border-top-left-radius: 8px;
-	border-bottom-left-radius: 8px;*/
+    padding: 20px;
+    /*
+    -webkit-border-left-top-radius: 8px;
+    -webkit-border-bottom-left-radius: 8px;
+    -moz-border-radius-topleft: 8px;
+    -moz-border-radius-bottomleft: 8px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;*/
 }
 </style>
 </head>
 <!--icons from iconfinder.com--!>
 <body>
-	<div class="page-wrap" align="center">
-		<div class="bodycontent-wrapper">
-			<div class="gap-title"></div>
-			<div class="bodycontent">
-				<div class="title">
-					Isai Wanrui Suriyanarayanan
-					<br>
-				</div>
-				<div align="center">
-				</div>
-				<hr class="hr1" />
-				<br>
-				<div align="center">
-					<div align="center">
-					<ul class="nobullet nomargin-nopadding inline-list">
-						<li><a href="mailto:mail@isai.cc" target="_blank"><img src="images/email.png" height="50" width="50" alt="email" title="email"/></a></li>
-						<li><a href="https://goodreads.com/isais" target="_blank"><img src="images/goodreads.png" height="50" width="50" alt="goodreads" title=""/></a></li>
-						<li><a href="https://github.com/isais" target="_blank"><img src="images/github.png" height="50" width="50" alt="github" title="github"/></a></li>
-					</div>
-				</div>
-				<br>
-				<div class="footer" align="center" style="color: rgba(255,255,255,.5)">
-					&copy; <a href="http://sajnikanth.com" target="_blank">Sajnikanth Suriyanarayanan</a>, 2015
-				</div>
-			</div>
-			<div class="gap-title2"></div>
-		</div>
-	</div>
+    <div class="page-wrap" align="center">
+        <div class="bodycontent-wrapper">
+            <div class="gap-title"></div>
+            <div class="bodycontent">
+                <div class="title">
+                    இசை 婉睿 सूर्यनारायणन
+                    <br>
+                    Isai Wanrui Suriyanarayanan
+                </div>
+
+                <hr class="hr1" />
+                <br>
+                <div>
+                    I'm Isai and these are my favourite things in the whole world:
+                    <br>
+                        * Jumping
+                    <br>
+                        * Reading
+                    <br>
+                        * Listening to music
+                    <br>
+                        * Jumping
+                    <br>
+                        * Not eating
+                    <br>
+                        * Dancing
+                    <br>
+                    <br>
+
+                    I also have a the best <a href="http://vira.ws" target="_blank">little-sister</a> in the world.
+                    <br>
+                    <br>
+                </div>
+                <div align="center">
+                    <div align="center">
+                    <ul class="nobullet nomargin-nopadding inline-list">
+                        <li><a href="mailto:mail@isai.cc" target="_blank"><img src="images/email.png" height="50" width="50" alt="email" title="email"/></a></li>
+                        <li><a href="https://goodreads.com/isais" target="_blank"><img src="images/goodreads.png" height="50" width="50" alt="goodreads" title=""/></a></li>
+                        <li><a href="https://github.com/isais" target="_blank"><img src="images/github.png" height="50" width="50" alt="github" title="github"/></a></li>
+                    </div>
+                </div>
+                <br>
+                <div class="footer" align="center" style="color: rgba(255,255,255,.5)">
+                    &copy; <a href="http://sajnikanth.com" target="_blank">Sajnikanth Suriyanarayanan</a>,
+                    <script type="text/javascript">
+                      document.write(new Date().getFullYear());
+                    </script>
+                </div>
+            </div>
+            <div class="gap-title2"></div>
+        </div>
+    </div>
 </body>
 </html>
